fixing grid gap and span

--- a/src/components/search-result/searchResult.scss
+++ b/src/components/search-result/searchResult.scss
@@ -2,15 +2,17 @@
 
 .result {
   width: 100%;
-  height: 100%;
+  // height: 100%;
   padding: 1rem;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: u.rem(16);
+  grid-gap: 0 10px;
+  grid-auto-rows: 10px;
   align-items: start;
   position: absolute;
   top: 7%;
   left: 0;
   z-index: 3;
   background-color: #fff;
+  margin-bottom: u.rem(100);
 }
